2008-11-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Use `(ftell port)' instead of `(seek port 0 SEEK_CUR)'.

	* libpq.c (lob_lo_tell): Use `scm_ftell'.

2008-11-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Decruft: Don't (pretend) to wrap system calls.

	* libpq.c (SYSCALL): Delete macro.
	(pg_trace, pg_untrace, pg_print): Update.

2008-09-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Use `(string-null? foo)' instead of `(string=? "" foo)'.

	* postgres-gxrepl.scm (gxrepl -read): Use `string-null?'.
	(gxrepl -print): Likewise.
	* postgres-table.scm (pgtable-manager): Likewise.

2008-09-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Use `size_t' instead of `scm_sizet'.

	* libpq.c (xc_free): Change return value type to `size_t'.
	(res_free, sepo_free): Likewise.

2008-08-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Remove support for unused SCM_OUTPORTP.

	* gi.h (SCM_OUTPORTP) [!HAVE_SCM_OUTPORTP]:
	Delete macro and surrounding #ifndef construct.

2008-08-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Hone C internals: Refactor, increase/add abstraction, etc.

	* libpq.c (PROB, NOINTS, INTSOK, GIVENP): New macros.
	(EXACTLY_FALSEP, EXACTLY_TRUEP): Delete macros.
	(DEFAULT_FALSE, RETURN_FALSE, RETURN_UNSPECIFIED): New macros.
	(ASSERT, ASSERT_STRING): New macros.
	(SYSCALL): Rename macro from `SCM_SYSCALL'.
	(ROZT_X): Use `gh_str2scm'.
	(SMOBDATA, PCHAIN, ERROR): New macros.
	(MEMORY_ERROR, SYSTEM_ERROR, WBPORT): New macros.
	(xc_unbox): Use `SMOBDATA'.
	(ASSERT_CONNECTION): Use `ASSERT'.
	(CONN_CONN): New macro.
	(xc_name): New static char array (string).
	(xc_display): Rewrite.
	(VALIDATE_CONNECTION_UNBOX_DBCONN): Use `ASSERT' and `CONN_CONN'.
	(LOB_CONN): Use `CONN_CONN'.
	(LOBPORTP): Use `SCM_NIMP'.
	(lob_mklobport, lob_lo_creat, lob_lo_open, lob_lo_unlink): Update.
	(ASSERT_PORT, LOB_STREAM): New macros.
	(lob_lo_get_connection, lob_lo_get_oid, lob_lo_tell, lob_flush)
	(lob_end_input, lob_seek, lob_lo_seek, lob_fill_input, lob_write)